fix: URLEncoder 改用 Java 8 兼容签名（云端 JDK8 构建修复）
URLEncoder.encode(String, Charset) 为 JDK10+ API，Docker 构建镜像为 temurin-8 导致编译失败；改用 encode(String, "UTF-8") 并捕获 UnsupportedEncodingException。